[package]
name = "with_iron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.5"
router = "0.5"
logger = "0.2"
env_logger = "0.3"
rustc-serialize = "0.3"
uuid= { version = "0.2", features = ["v4", "rustc-serialize"] }
chrono= {version="0.2", features= ["rustc-serialize"]}